force-app/main/default/objects/ssot__ApplicationRecommendation__dlm/fields/ssot__ApplicationRecommenderId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationRecommenderId__c</fullName>
    <label>Application Recommender</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationRecommenderId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>