force-app/main/default/objects/ssot__ApplicationRecommendation__dlm/fields/ssot__Recommendation__c.field-meta.xml
<CustomField>
    <fullName>ssot__Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Recommendation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>