force-app/main/default/objects/ssot__ApplicationRecommendation__dlm/fields/ssot__rel_1719818621461_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818621461_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationRecommendation_Applicatio_rel</label>
    <referenceTo>ssot__ApplicationRecommender__dlm</referenceTo>
    <relationshipLabel>ApplicationRecommendation_Applicatio_rel</relationshipLabel>
    <relationshipName>rel_1719818621461_end</relationshipName>
    <type>Lookup</type>
</CustomField>